--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "(BSD-3-Clause AND CC-BY-4.0)",
   "type": "module",
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -27,25 +27,19 @@
     "pnpm": ">=10.0.0 <11.0.0"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@saleor/app-sdk": "1.3.0",
     "@saleor/macaw-ui": "1.3.1",
     "@urql/exchange-auth": "^1.0.0",
+    "dotenv": "^17.2.3",
     "next": "15.1.7",
+    "node-fetch": "^3.3.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "urql": "^4.0.2"
   },
   "packageManager": "pnpm@10.12.1",
   "devDependencies": {
-    "@vitejs/plugin-react": "4.2.1",
-    "graphql": "^16.8.1",
-    "graphql-tag": "^2.12.6",
-    "jsdom": "^20.0.3",
-    "vite": "5.2.10",
-    "vitest": "1.5.2",
-    "vite-tsconfig-paths": "5.1.4",
-    "tsx": "4.20.3",
-    "json-schema-to-typescript": "^15.0.4",
     "@graphql-codegen/add": "3.2.0",
     "@graphql-codegen/cli": "3.3.1",
     "@graphql-codegen/introspection": "3.0.1",
@@ -57,15 +51,27 @@
     "@graphql-codegen/urql-introspection": "2.2.1",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@saleor/eslint-plugin-saleor-app": "^0.1.2",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.19.130",
+    "@types/node-fetch": "^2.6.13",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@vitejs/plugin-react": "4.2.1",
+    "cross-env": "^10.1.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-simple-import-sort": "12.1.1",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
+    "jsdom": "^20.0.3",
+    "json-schema-to-typescript": "^15.0.4",
     "prettier": "^2.8.2",
-    "typescript": "5.0.4"
+    "ts-node": "^10.9.2",
+    "tsx": "4.20.3",
+    "typescript": "^5.0.4",
+    "vite": "5.2.10",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "1.5.2"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": "eslint --cache --fix",
