--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "@google/generative-ai": "^0.24.1",
     "@saleor/app-sdk": "1.3.0",
     "@saleor/macaw-ui": "1.3.1",
+    "@trigger.dev/sdk": "4.2.0",
     "@urql/exchange-auth": "^1.0.0",
     "dotenv": "^17.2.3",
     "next": "15.1.7",
     "node-fetch": "^3.3.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "shippo": "^2.15.0",
     "urql": "^4.0.2"
   },
   "packageManager": "pnpm@10.12.1",
