--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@saleor/app-sdk": "1.3.0",
     "@saleor/macaw-ui": "1.3.1",
     "@trigger.dev/sdk": "4.2.0",
+    "@upstash/redis": "^1.35.8",
     "@urql/exchange-auth": "^1.0.0",
     "dotenv": "^17.2.3",
     "next": "16.0.10",
